Fixed the search bar layout issue

--- a/src/components/_dbaas-import-view.css
+++ b/src/components/_dbaas-import-view.css
@@ -223,3 +223,15 @@
     display: grid;
     grid-template-columns: 200px 200px;
   }
+
+  .custom-text-filter-feedback {
+    display: block;
+    height: 29px;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 5px;
+    width: 29px;
+    z-index: 2;
+  }
